--- a/Consumption.Console/Consumption.Console.csproj
+++ b/Consumption.Console/Consumption.Console.csproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
       <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.8" />
+      <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
     </ItemGroup>
 
 </Project>
