--- a/Consumption.Console/Consumption.Console.csproj
+++ b/Consumption.Console/Consumption.Console.csproj
@@ -8,6 +8,7 @@
     <ItemGroup>
       <PackageReference Include="Microsoft.IdentityModel.Clients.ActiveDirectory" Version="5.2.8" />
       <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+      <PackageReference Include="Spectre.Console" Version="0.30.0" />
     </ItemGroup>
 
 </Project>
